--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "better-sqlite3": "^12.5.0",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
